// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for code_suggestions_acceptance_rate metric with null values response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "tooltip": {
          "description": "Percentage ratio of total number of code suggestions generated / code suggestions accepted. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/user/project/repository/code_suggestions/_index#use-code-suggestions",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for code_suggestions_acceptance_rate metric with valid response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "tooltip": {
          "description": "Percentage ratio of total number of code suggestions generated / code suggestions accepted. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/user/project/repository/code_suggestions/_index#use-code-suggestions",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for code_suggestions_acceptance_rate metric with zeroes response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "tooltip": {
          "description": "Percentage ratio of total number of code suggestions generated / code suggestions accepted. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/user/project/repository/code_suggestions/_index#use-code-suggestions",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for code_suggestions_usage_rate metric with null values response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "tooltip": {
          "description": "Monthly user engagement with AI Code Suggestions. Percentage ratio calculated as monthly unique Code Suggestions users / total monthly unique code contributors in the last 30 days. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/user/project/repository/code_suggestions/_index#use-code-suggestions",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for code_suggestions_usage_rate metric with valid response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "tooltip": {
          "description": "Monthly user engagement with AI Code Suggestions. Percentage ratio calculated as monthly unique Code Suggestions users / total monthly unique code contributors in the last 30 days. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/user/project/repository/code_suggestions/_index#use-code-suggestions",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for code_suggestions_usage_rate metric with zeroes response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "tooltip": {
          "description": "Monthly user engagement with AI Code Suggestions. Percentage ratio calculated as monthly unique Code Suggestions users / total monthly unique code contributors in the last 30 days. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/user/project/repository/code_suggestions/_index#use-code-suggestions",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_chat_usage_rate metric with null values response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "tooltip": {
          "description": "Percentage ratio of total Duo seats assigned / Duo seats assigned that interacted with Duo Chat. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/user/gitlab_duo_chat/_index",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_chat_usage_rate metric with valid response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "tooltip": {
          "description": "Percentage ratio of total Duo seats assigned / Duo seats assigned that interacted with Duo Chat. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/user/gitlab_duo_chat/_index",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_chat_usage_rate metric with zeroes response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "tooltip": {
          "description": "Percentage ratio of total Duo seats assigned / Duo seats assigned that interacted with Duo Chat. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/user/gitlab_duo_chat/_index",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_usage_rate metric with null values response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "tooltip": {
          "description": "Percentage ratio of total Duo seats assigned / Duo seats assigned that used at least one Duo feature. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/subscriptions/subscription-add-ons#assign-gitlab-duo-seats",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_usage_rate metric with valid response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "tooltip": {
          "description": "Percentage ratio of total Duo seats assigned / Duo seats assigned that used at least one Duo feature. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/subscriptions/subscription-add-ons#assign-gitlab-duo-seats",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_usage_rate metric with zeroes response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "tooltip": {
          "description": "Percentage ratio of total Duo seats assigned / Duo seats assigned that used at least one Duo feature. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/subscriptions/subscription-add-ons#assign-gitlab-duo-seats",
        },
      },
    },
  ],
]
`;
